spade-tests/src/snapshots/spade_tests__hir_lowering__tests__instantiating_builtin_generic_which_is_non_intrinsic_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn a<T>() -> T __builtin__

fn main() -> int<32> {
    a()
}


error: Generic builtins can not be instantiated
  ┌─ testinput:4:5
  │
1 │ fn a<T>() -> T __builtin__
  │ -------------------------- Because this is a generic __builtin__
  ·
4 │     a()
  │     ^^^ Invalid instance


